--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ h1{
 
 section{
     display: flex;
+    margin-bottom: 150px;
     
 }
 .half-width{
@@ -39,4 +40,13 @@ section{
     background-image: url(img/top-banner.png);
     background-repeat: no-repeat;
    
+}
+.dream-big{
+    background-image: url(img/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position:right ;
+    
+}
+.dream-big .half-width{
+    margin-right: 125px;
 }
