--- a/style.css
+++ b/style.css
@@ -6,19 +6,22 @@ body{
 h1{
     font-size: 50px;
 }
-
+h2{
+    font-size:40px ;
+}
 .orange-color{
     color: orange;
 }
 
 .flexible-container{
     display: flex;
-    margin-bottom: 150px;
+    margin-bottom: 200px;
     
 }
 .half-width{
     width: 50%;
     padding-left: 2%;
+    
 
 }
 .half-width img{
@@ -36,7 +39,7 @@ h1{
     border-radius: 4px;
 
 }
-.top-banner{
+.top-banner-first{
     background-image: url(img/top-banner.png);
     background-repeat: no-repeat;
    
@@ -49,4 +52,40 @@ h1{
 }
 .dream-big .half-width{
     margin-right: 125px;
+}
+
+.expreience-area{
+    background-image: url(img/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+
+}
+.experience-item{
+   
+    width: 40%;
+    margin-left:5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 40px gray;
+    
+
+
+}
+
+
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(salmon,purple
+    );
+    border-image-slice: 1;
+}
+
+#mern-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue,cyan);
+    border-image-slice: 1;
+}
+footer p{
+text-align: center;
 }
